# meshing

./: CMakeLists.txt  CMakePresets.json  Octree.cpp  README.md  ReadModel.cpp  Types.h  meshing.cpp  meshing.h
Algorithm/: Ray.h
Visualization/: Camera.cpp  Camera.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Shader.cpp  Shader.h  controller.cpp  controller.h
Visualization/Lights/: Light.cpp  Light.h  LightSpot.cpp  LightSpot.h
Visualization/ShaderSource/: normalFrag.frag  normalVert.txt  normalVert.vert  pointFrag.frag  pointVert.vert
